[package]
name = "hewpme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "~3.6"
serde = { version = "~1", features = ["serde_derive"] }
serde_json = "~1"
tinytemplate = "~1.2"
tokio = { version = "1.36", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twitch-irc = { version = "~5", features = ["transport-tcp", "transport-tcp-native-tls"] }
