[package]
name = "hewpme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1", features = ["serde_derive"] }
serde_json = "~1"
tokio = { version = "1.36", features = ["rt"] }
tokio-tungstenite = { version = "~0.21", features = ["rustls-tls-native-roots"] }
tokio-util = "~0.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twitch-irc = { version = "~5", features = ["transport-tcp", "transport-tcp-native-tls", "refreshing-token-rustls-native-roots"] }
twitch_api = { version = "0.7.0-rc.7", features = ["twitch_oauth2", "eventsub", "reqwest", "helix", "client", "mock_api"] }
twitch_oauth2 = { version = "0.12.9", features = ["client"] }
reqwest = { version = "~0.11", features = ["rustls"] }
url = "2.5.0"
futures = "~0.3"
warp = "~0.3"
rouille = "~3.6"
tinytemplate = "~1.2"
directories = "~5"

[features]
debug = []
